fix #225. Send feedback and Help widget height has been modify to not look bloated on mobile.

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -542,7 +542,7 @@ hr.menu_separator{
 
 .otp-defaultInfoWidget {
     width: 75%;
-    height: 75%;
+    height: auto;
     overflow: hidden;
     background: #006747;
     color: #FFF;
